test/must_fail/file_write_to_protected_path.ngjs
#!/usr/bin/env ngspicejs
// Writing to root dir should fail
// linter: ngspicejs-lint
"use strict";

file_write_json('/1.json', {a:1, b: 2, c: true});

